{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 97,
  "lineage": "a0aba055-f3c2-0e5d-3270-264df6eccb90",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongo_node1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20211206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-b/disks/mongodb-node1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "VM hosting tools for node 1 of mongodb",
            "enable_display": false,
            "id": "projects/bamboo-mercury-335016/zones/us-east1-b/instances/mongodb-node1",
            "instance_id": "9172868421570082046",
            "label_fingerprint": "qML2dwisFko=",
            "labels": {
              "app": "mongodb",
              "env": "dev"
            },
            "machine_type": "f1-micro",
            "metadata": {
              "metadata_startup_script": "set -v\n\n\n# Talk to the metadata server to get the project id\nPROJECTID=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/project/project-id\" -H \"Metadata-Flavor: Google\")\nREPOSITORY=\"new-repo\"\n\n# Install logging monitor. The monitor will automatically pick up logs sent to\n# syslog.\ncurl -s \"https://storage.googleapis.com/signals-agents/logging/google-fluentd-install.sh\" | bash\nservice google-fluentd restart \u0026\n\n# Insta [...]
              "ssh-keys": "nina_belova_1995:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDdeai3oowGUXaPocGnvP43S1xO2T/o8j3D+Tvfnjj/UHzsPgfLmmJtaT8UGiAsEsGH9zzlCXPgc2XE+J2wo1pOKywxV/FnXtj43zGQIEBUNYc/wgQX/KGkFND9TVLy7Fq7ZgaTXuwU/0WYdqYxpLt302ejQfxtnRp53uQkUS4vt1lpvrT9XYq7rC0x0Gu5iBDNgrx3vjY+WzfYBdu2yKsiZnJIxrICS2y3MWYCWht5HbyvSS2pWKbnRM3v+n1FV5r8lufPpWnSc/PsRDIAZcFpC9wq4LKHa7FLR9GM4jpRra02oQ2yia0eXgIf0je85goYic0u3vOosHZaPno9KkHB2pkyV7kzb/KUpDE2O1o087OjMz0NqqVh3tMaM6TPUcOWTi3wDrmDB++5CEl1FDRJ/9kx+YfGYcbX [...]
            },
            "metadata_fingerprint": "r8CtS9MNjx4=",
            "name": "mongodb-node1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.51.35",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/default",
                "network_ip": "10.142.0.18",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/subnetworks/default",
                "subnetwork_project": "bamboo-mercury-335016"
              }
            ],
            "project": "bamboo-mercury-335016",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-b/instances/mongodb-node1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-mongodb"
            ],
            "tags_fingerprint": "GyaKs76pRj8=",
            "zone": "us-east1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongo_node2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20211206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-c/disks/mongodb-node2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "VM hosting tools for node 2 of mongodb",
            "enable_display": false,
            "id": "projects/bamboo-mercury-335016/zones/us-east1-c/instances/mongodb-node2",
            "instance_id": "1722327364015568126",
            "label_fingerprint": "qML2dwisFko=",
            "labels": {
              "app": "mongodb",
              "env": "dev"
            },
            "machine_type": "f1-micro",
            "metadata": {
              "metadata_startup_script": "set -v\n\n\n# Talk to the metadata server to get the project id\nPROJECTID=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/project/project-id\" -H \"Metadata-Flavor: Google\")\nREPOSITORY=\"new-repo\"\n\n# Install logging monitor. The monitor will automatically pick up logs sent to\n# syslog.\ncurl -s \"https://storage.googleapis.com/signals-agents/logging/google-fluentd-install.sh\" | bash\nservice google-fluentd restart \u0026\n\n# Insta [...]
              "ssh-keys": "nina_belova_1995:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDdeai3oowGUXaPocGnvP43S1xO2T/o8j3D+Tvfnjj/UHzsPgfLmmJtaT8UGiAsEsGH9zzlCXPgc2XE+J2wo1pOKywxV/FnXtj43zGQIEBUNYc/wgQX/KGkFND9TVLy7Fq7ZgaTXuwU/0WYdqYxpLt302ejQfxtnRp53uQkUS4vt1lpvrT9XYq7rC0x0Gu5iBDNgrx3vjY+WzfYBdu2yKsiZnJIxrICS2y3MWYCWht5HbyvSS2pWKbnRM3v+n1FV5r8lufPpWnSc/PsRDIAZcFpC9wq4LKHa7FLR9GM4jpRra02oQ2yia0eXgIf0je85goYic0u3vOosHZaPno9KkHB2pkyV7kzb/KUpDE2O1o087OjMz0NqqVh3tMaM6TPUcOWTi3wDrmDB++5CEl1FDRJ/9kx+YfGYcbX [...]
            },
            "metadata_fingerprint": "r8CtS9MNjx4=",
            "name": "mongodb-node2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.196.28.21",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/default",
                "network_ip": "10.142.0.19",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/subnetworks/default",
                "subnetwork_project": "bamboo-mercury-335016"
              }
            ],
            "project": "bamboo-mercury-335016",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-c/instances/mongodb-node2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-mongodb"
            ],
            "tags_fingerprint": "GyaKs76pRj8=",
            "zone": "us-east1-c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongo_node3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20211206",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-d/disks/mongodb-node3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "description": "VM hosting tools for node 3 of mongodb",
            "enable_display": false,
            "id": "projects/bamboo-mercury-335016/zones/us-east1-d/instances/mongodb-node3",
            "instance_id": "774352400169645310",
            "label_fingerprint": "qML2dwisFko=",
            "labels": {
              "app": "mongodb",
              "env": "dev"
            },
            "machine_type": "f1-micro",
            "metadata": {
              "metadata_startup_script": "set -v\n\n\n# Talk to the metadata server to get the project id\nPROJECTID=$(curl -s \"http://metadata.google.internal/computeMetadata/v1/project/project-id\" -H \"Metadata-Flavor: Google\")\nREPOSITORY=\"new-repo\"\n\n# Install logging monitor. The monitor will automatically pick up logs sent to\n# syslog.\ncurl -s \"https://storage.googleapis.com/signals-agents/logging/google-fluentd-install.sh\" | bash\nservice google-fluentd restart \u0026\n\n# Insta [...]
              "ssh-keys": "nina_belova_1995:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDdeai3oowGUXaPocGnvP43S1xO2T/o8j3D+Tvfnjj/UHzsPgfLmmJtaT8UGiAsEsGH9zzlCXPgc2XE+J2wo1pOKywxV/FnXtj43zGQIEBUNYc/wgQX/KGkFND9TVLy7Fq7ZgaTXuwU/0WYdqYxpLt302ejQfxtnRp53uQkUS4vt1lpvrT9XYq7rC0x0Gu5iBDNgrx3vjY+WzfYBdu2yKsiZnJIxrICS2y3MWYCWht5HbyvSS2pWKbnRM3v+n1FV5r8lufPpWnSc/PsRDIAZcFpC9wq4LKHa7FLR9GM4jpRra02oQ2yia0eXgIf0je85goYic0u3vOosHZaPno9KkHB2pkyV7kzb/KUpDE2O1o087OjMz0NqqVh3tMaM6TPUcOWTi3wDrmDB++5CEl1FDRJ/9kx+YfGYcbX [...]
            },
            "metadata_fingerprint": "r8CtS9MNjx4=",
            "name": "mongodb-node3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.237.220.19",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/default",
                "network_ip": "10.142.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/subnetworks/default",
                "subnetwork_project": "bamboo-mercury-335016"
              }
            ],
            "project": "bamboo-mercury-335016",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-d/instances/mongodb-node3",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-mongodb"
            ],
            "tags_fingerprint": "GyaKs76pRj8=",
            "zone": "us-east1-d"
          }
        }
      ]
    },
    {
      "module": "module.gce-ilb",
      "mode": "data",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/bamboo-mercury-335016/global/networks/default",
            "name": "default",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/australia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/asia-east2/subnetworks/default"
            ]
          }
        }
      ]
    },
    {
      "module": "module.gce-ilb",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.142.0.1",
            "id": "projects/bamboo-mercury-335016/regions/us-east1/subnetworks/default",
            "ip_cidr_range": "10.142.0.0/20",
            "name": "default",
            "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/default",
            "private_ip_google_access": false,
            "project": "bamboo-mercury-335016",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/subnetworks/default"
          }
        }
      ]
    },
    {
      "module": "module.gce-ilb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-14T04:11:59.831-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bamboo-mercury-335016/global/firewalls/ilb-mongocluster-hc",
            "log_config": [],
            "name": "ilb-mongocluster-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/default",
            "priority": 1000,
            "project": "bamboo-mercury-335016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/firewalls/ilb-mongocluster-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-mongodb"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gce-ilb.data.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gce-ilb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-ilb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-12-14T04:11:59.798-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/bamboo-mercury-335016/global/firewalls/ilb-mongocluster-ilb-fw",
            "log_config": [],
            "name": "ilb-mongocluster-ilb-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/default",
            "priority": 1000,
            "project": "bamboo-mercury-335016",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/firewalls/ilb-mongocluster-ilb-fw",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "allow-mongodb"
            ],
            "target_service_accounts": null,
            "target_tags": [
              "allow-mongodb"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gce-ilb.data.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.gce-ilb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "backend_service": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/backendServices/ilb-mongocluster-with-tcp-hc",
            "creation_timestamp": "2021-12-14T04:13:01.180-08:00",
            "id": "projects/bamboo-mercury-335016/regions/us-east1/forwardingRules/ilb-mongocluster",
            "ip_address": "10.142.0.21",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL",
            "name": "ilb-mongocluster",
            "network": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/networks/default",
            "network_tier": "PREMIUM",
            "ports": [
              "27017"
            ],
            "project": "bamboo-mercury-335016",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/forwardingRules/ilb-mongocluster",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/subnetworks/default"
          },
          "dependencies": [
            "google_compute_instance.mongo_node1",
            "google_compute_instance.mongo_node2",
            "google_compute_instance.mongo_node3",
            "google_compute_instance_group.mongo_group1",
            "google_compute_instance_group.mongo_group2",
            "google_compute_instance_group.mongo_group3",
            "module.gce-ilb.data.google_compute_network.network",
            "module.gce-ilb.data.google_compute_subnetwork.network",
            "module.gce-ilb.google_compute_health_check.http",
            "module.gce-ilb.google_compute_health_check.tcp",
            "module.gce-ilb.google_compute_region_backend_service.default"
          ]
        }
      ]
    },
    {
      "module": "module.gce-ilb",
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-b/instanceGroups/mongodb-group1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-c/instanceGroups/mongodb-group2",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "CONNECTION",
                "capacity_scaler": 0,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/zones/us-east1-d/instanceGroups/mongodb-group3",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2021-12-14T04:12:38.093-08:00",
            "enable_cdn": false,
            "fingerprint": "gR4e69dMlYI=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/global/healthChecks/ilb-mongocluster-hc-tcp"
            ],
            "id": "projects/bamboo-mercury-335016/regions/us-east1/backendServices/ilb-mongocluster-with-tcp-hc",
            "load_balancing_scheme": "INTERNAL",
            "name": "ilb-mongocluster-with-tcp-hc",
            "project": "bamboo-mercury-335016",
            "protocol": "TCP",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/bamboo-mercury-335016/regions/us-east1/backendServices/ilb-mongocluster-with-tcp-hc",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_instance.mongo_node1",
            "google_compute_instance.mongo_node2",
            "google_compute_instance.mongo_node3",
            "google_compute_instance_group.mongo_group1",
            "google_compute_instance_group.mongo_group2",
            "google_compute_instance_group.mongo_group3",
            "module.gce-ilb.google_compute_health_check.http",
            "module.gce-ilb.google_compute_health_check.tcp"
          ]
        }
      ]
    }
  ]
}